package com.ecommerce.order.domain;

public enum OrderStatus {
    CREATED,
    PENDING_PAYMENT,
    PAID,
    PAYMENT_FAILED
}
