package com.ecommerce.payment.dto;

public enum PaymentStatus {
    SUCCESS,
    FAILED,
    PROCESSING,
    PENDING
}

